[project]
name = "genie-chipdb"
version = "0.1.0"
description = "Chip info database with Q&A web frontend and MCP server"
requires-python = ">=3.9"
dependencies = [
    "genie-core @ git+https://github.com/Simon99/genie-core.git",
    "chromadb>=0.4",
    "flask>=3.0",
    "flask-cors>=4.0",
]

[project.scripts]
genie-chipdb = "genie_chipdb.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
